--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     compile 'org.seleniumhq.selenium:selenium-java:3.14.0'
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     compile 'commons-net:commons-net:20030805.205232'
+    compile 'org.subethamail:subethasmtp:3.1.7'
 }
 
 task {
