--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile 'com.thoughtworks.xstream:xstream:1.4.10'
     compile 'com.google.code.gson:gson:2.8.5'
     compile 'org.hibernate:hibernate-core:5.3.7.Final'
+    compile 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
 }
 
 task {
